[tool.poetry]
name = "tes"
version = "0.1.0"
description = "A sample Python project"
authors = ["dynames <muslihgilman2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
pandas = "^2.2.2"
tabulate = "^0.9.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pyngrok = "^7.1.6"
scikit-learn = "^1.4.2"
werkzeug = "^3.0.3"
xgboost = "^2.0.3"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
pymongo = "^4.7.2"
firebase-admin = "^6.5.0"
shap = "^0.46.0"
scipy = "^1.14.0"

[tool.poetry.dev-dependencies]
black = "^23.1"
